# GraphRAG-Agentic-RAG-system-with-multi-hop-reasoning

./: Agentic_GraphRAG (1).ipynb  README.md  app.py  chainlit.md  main.py  pyproject.toml
.files/10afc711-8490-483d-bb1e-ca6e2c1d1971/: 3428c3a1-f362-4650-9987-d305e12844e4.txt  47f25586-5a72-49dc-91cf-86c17b588917.txt  997349b1-eea1-4e31-8e25-a2d959000800.txt  ec1a13f6-7465-4bc2-833f-c81c4690a6e0.txt  f091ec43-bee0-4136-b25d-942f27f36a9e.txt
agents/: nodes.py  state.py  tools.py  workflow.py
core/: config.py  embeddings.py  graph_db.py  groq_client.py  knowledge_extractor.py  pdf_processor.py  vector_db.py
rag/: normal_rag.py
